crates/pack/tests/compile_fail/fact_struct_literal.stderr
error: cannot construct `ContextFact` with struct literal syntax due to private fields
  --> tests/compile_fail/fact_struct_literal.rs:8:17
   |
 8 |     let _fact = ContextFact {
   |                 ^^^^^^^^^^^
 9 |         key: ContextKey::Seeds,
   |         ---------------------- private field
10 |         id: "test-id".into(),
   |         -------------------- private field
11 |         payload: unreachable!(),
   |         ----------------------- private field
12 |         promotion_record: unreachable!(),
   |         -------------------------------- private field
13 |         created_at: unreachable!(),
   |         -------------------------- private field
   |
   = note: ...and other private field `subject` that was not provided
help: you might have meant to use the `new_projection` associated function
   |
 8 -     let _fact = ContextFact {
 9 -         key: ContextKey::Seeds,
10 -         id: "test-id".into(),
11 -         payload: unreachable!(),
12 -         promotion_record: unreachable!(),
13 -         created_at: unreachable!(),
14 -     };
 8 +     let _fact = ContextFact::new_projection(_, _, _, _, _);
   |
